--- a/index.html
+++ b/index.html
@@ -273,7 +273,7 @@
         <div class="bg-gray-800 text-gray-200 rounded-2xl shadow-2xl w-full max-w-lg text-center p-8">
             <div id="confirmation-icon"><i class="fas fa-check-circle text-green-500 text-6xl mb-4"></i></div>
             <h3 id="confirmation-title" class="text-2xl font-bold text-gray-100 mb-2">Pedido Recebido!</h3>
-            <p id="confirmation-message" class="text-gray-400 mb-6">Seu resumo está pronto. Clique no botão para enviar via WhatsApp e concluir seu pedido!</p>
+            <p id="confirmation-message" class="text-gray-400 mb-6">Seu pedido foi gerado! Clique no botão abaixo para encaminhá-lo para o WhatsApp da loja e finalizar a compra.</p>
             <div id="order-summary" class="text-left bg-gray-700 p-4 rounded-lg mb-6 max-h-60 overflow-y-auto modal-body"></div>
             <div id="initial-confirm-buttons" class="flex flex-col sm:flex-row gap-4 justify-center">
                  <button onclick="app.sendOrderViaWhatsApp()" class="w-full bg-green-500 text-white font-bold py-3 px-6 rounded-lg hover:bg-green-600 transition-all flex items-center justify-center gap-2">
@@ -407,16 +407,13 @@
             { name: '500ml', price: 20.00 }
         ],
         defaultToppings: {
+            // Merged 'free' and 'grains' categories
             free: {
-                title: '🍓 Frutas e Cremes (Grátis, escolha até 3)', limit: 3, items: [
+                title: '🍓 Frutas, Cremes e Grãos (Grátis, escolha até 3)', limit: 3, items: [
                     { name: 'Sorvete', disabled: false }, { name: 'Banana', disabled: false }, { name: 'Morango', disabled: false }, 
                     { name: 'Manga', disabled: false }, { name: 'Kiwi', disabled: false }, { name: 'Uva', disabled: false }, 
                     { name: 'Abacaxi', disabled: false }, { name: 'Creme de Leite Ninho', disabled: false }, { name: 'Creme de Cupuaçu', disabled: false }, 
-                    { name: 'Creme de Avelã', disabled: false }, { name: 'Mousse de Maracujá', disabled: false }
-                ]
-            },
-            grains: {
-                title: '🌾 Grãos e Cereais (Grátis, escolha até 2)', limit: 2, items: [
+                    { name: 'Creme de Avelã', disabled: false }, { name: 'Mousse de Maracujá', disabled: false },
                     { name: 'Granola Tradicional', disabled: false }, { name: 'Aveia', disabled: false }, { name: 'Flocos', disabled: false }, 
                     { name: 'Tapioca', disabled: false }, { name: 'Paçoca', disabled: false }, { name: 'Leite em Pó', disabled: false }, 
                     { name: 'Amendoim', disabled: false }, { name: 'Coco Ralado', disabled: false }
@@ -429,7 +426,7 @@
                 ]
             },
             paid_tier2: {
-                title: '🍫 Doces e Chocolates (+ R$ 3,00 cada)', price: 3.00, items: [
+                title: '🍫 Doces e Chocolates (+ R$ 2,00 cada)', price: 2.00, items: [ /* Changed price to 2.00 */
                     { name: 'Gotas de Chocolate', disabled: false }, { name: 'Confetes', disabled: false }, { name: 'Bis Picado', disabled: false }, 
                     { name: 'Sonho de Valsa', disabled: false }, { name: 'M&M\'s', disabled: false }, { name: 'Ovomaltine', disabled: false }, { name: 'Chocopower', disabled: false }, { name: 'KitKat', disabled: false }
                 ]
@@ -1067,7 +1064,8 @@
             setTimeout(() => {
                 app.elements.confirmationIcon.innerHTML = '<i class="fas fa-check-circle text-green-500 text-6xl mb-4"></i>';
                 app.elements.confirmationTitle.textContent = 'Pedido Recebido!';
-                app.elements.confirmationMessage.textContent = 'Seu resumo está pronto. Clique no botão para enviar via WhatsApp e concluir seu pedido!';
+                // Updated message here
+                app.elements.confirmationMessage.textContent = 'Seu pedido foi gerado! Clique no botão abaixo para encaminhá-lo para o WhatsApp da loja e finalizar a compra.';
                 app.elements.initialConfirmButtons.classList.remove('hidden');
                 app.elements.initialConfirmButtons.classList.add('flex');
                 app.elements.postSendButtons.classList.add('hidden');
