--- a/index.html
+++ b/index.html
@@ -153,12 +153,12 @@
     </a>
 
     <!-- WhatsApp Floating Button (Emerson Taxista) -->
-    <a href="https://wa.me/5594981756146" target="_blank" class="fixed top-1/2 -translate-y-1/2 left-5 z-50 group">
+    <a href="https://wa.me/5594981756146?text=Ol%C3%A1%20Emerson%2C%20estou%20precisando%20de%20transporte%2C%20voce%20esta%20dispon%C3%ADvel%3F" target="_blank" class="fixed top-1/2 -translate-y-1/2 left-5 z-50 group">
         <button class="bg-blue-600 text-white w-16 h-16 rounded-full shadow-lg flex items-center justify-center hover:bg-blue-700 transition-transform transform hover:scale-110">
-            <i class="fas fa-taxi text-3xl"></i>
+            <i class="fas fa-car text-3xl"></i>
         </button>
         <span class="absolute left-full ml-3 px-3 py-1 bg-blue-600 text-white text-sm font-bold rounded-md whitespace-nowrap opacity-0 group-hover:opacity-100 transition-opacity duration-300 pointer-events-none">
-            Chamar Emerson Taxista
+            Chamar Emerson (Uber/Táxi)
         </span>
     </a>
 
